[tool.poetry]
name = "task2"
version = "0.1.0"
description = ""
authors = ["kultyshev.denis <kultyshev.denis@wb.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
notebook = "^7.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
